[tool.poetry]
name = "youtube codingentrepreneurs react and django tutorial"
version = "0.1.0"
description = ""
authors = ["Rodolfo R. Raquion III <cb_r12@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
Pillow = "^8.2.0"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
